2008-11-05  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-stop.c (main): stop IM currently running
	if no arguments specified.

	* utils/imsettings-start.c (main): start the default IM if no arguments
	specified.

	* data/none.in.in (QT_IM_MODULE): default to xim.

2008-10-28  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_client_protocol_real_xim_register_triggerkeys):
	do not discard the signal when imid is 0.

2008-10-23  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_set_ic_values): 
	Fix a freeze issue when focus out and reset the number of the forward
	event waiting for. this might be the race condition issue again. so it
	would be safe to append the request into the queue still.

2008-10-21  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_start_im): allow to start none
	without any warnings.

2008-10-12  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_disconnect_all): wait for finishing
	the reconnection before disconnecting the session.

	* backends/xim/proxy.c (xim_proxy_client_protocol_real_parser_error):
	send back XIM_DESTROY_IC_REPLY instead of XIM_ERROR.

2008-10-11  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (_INC_PENDING): store imid and icid as well.
	(_DEC_PENDING): take imid and icid as argument.
	(INC_PENDING): likewise.
	(DEC_PENDING): likewise.
	(INC_PENDING_C): likewise.
	(DEC_PENDING_C): likewise.
	(xim_proxy_real_dispose): just flush the queue instead of waiting for
	the pending request.
	(xim_proxy_disconnect_all): likewise.
	(xim_proxy_flush_queue): new.

	* backends/xim/proxy.c (xim_proxy_client_protocol_real_xim_encoding_negotiation_reply):
	decrease the pending counter when reconnecting as well.

	* data/xinput.sh.in.in (is_gtk_supported): Add a "kde" since KDE
	support XDG autostart and imsettings-applet could works for XSETTINGS
	manager on KDE.
